# bitbots_thmos_meta

./: README.md
bitbots_behavior/bitbots_body_behavior/config/: body_behavior.yaml
bitbots_behavior/bitbots_head_behavior/config/: head_config.yaml
bitbots_behavior/bitbots_head_behavior/scripts/: test_look_at.py
bitbots_behavior/bitbots_head_behavior/src/: collision_checker.cpp
bitbots_bringup/launch/: motion.launch  motion_noviz.launch  motion_viz.launch
bitbots_bringup/scripts/: motor_goals_viz_helper_thmos.py
bitbots_dynamic_kick/: setup.py
bitbots_dynamic_kick/cfg/: bitbots_dynamic_kick_params.cfg
bitbots_dynamic_kick/launch/: viz_thmos.launch
bitbots_misc/bitbots_bringup/: CMakeLists.txt  package.xml
bitbots_misc/bitbots_bringup/launch/: load_robot_description.launch  load_robot_description_thmos.launch  thmos_sim_bringup.launch
bitbots_misc/bitbots_convenience_frames/: CMakeLists.txt  package.xml
bitbots_misc/bitbots_teleop/: CMakeLists.txt  package.xml
bitbots_misc/bitbots_teleop/scripts/: teleop_keyboard.py
bitbots_motion/bitbots_dynamic_kick/: CMakeLists.txt
bitbots_motion/bitbots_dynamic_kick/config/: kick_config.yaml
bitbots_motion/bitbots_dynamic_kick/launch/: dynamic_kick_simulator.launch  viz_thmos.launch
bitbots_motion/bitbots_dynamic_kick/src/: kick_ik.cpp  kick_node.cpp
bitbots_motion/bitbots_dynup/config/: dynup_robot.yaml  dynup_sim.yaml
bitbots_motion/bitbots_dynup/launch/: viz_thmos.launch
bitbots_motion/bitbots_dynup/src/: dynup_node.cpp
bitbots_motion/bitbots_odometry/launch/: odometry.launch
bitbots_motion/bitbots_odometry/src/: odometry_fuser.cpp
bitbots_motion/bitbots_quintic_walk/: CMakeLists.txt  package.xml
bitbots_motion/bitbots_quintic_walk/config/: walking_thmos_robot.yaml  walking_thmos_simulator.yaml
bitbots_motion/bitbots_quintic_walk/launch/: noviz_thmos.launch  quintic_walk.launch  quintic_walk_standalone_thmos.launch  viz_thmos.launch
bitbots_motion/bitbots_quintic_walk/src/: walk_engine.cpp  walk_ik.cpp  walk_node.cpp  walk_pywrapper.cpp  walk_visualizer.cpp
bitbots_motion/bitbots_splines/: CMakeLists.txt
bitbots_msgs/: CMakeLists.txt  package.xml
bitbots_navigation/bitbots_localization/config/: config.yaml  localization.rviz
bitbots_navigation/bitbots_move_base/config/: bitbots_local_planner_config.yaml  dwa_local_planner_config.yaml  global_costmap_config.yaml  move_base_config.yaml  teb_local_planner_params.yaml
bitbots_quintic_walk/: setup.py
bitbots_quintic_walk/cfg/: bitbots_quintic_walk_engine_params.cfg
bitbots_quintic_walk/config/: walk.rviz
bitbots_quintic_walk/launch/: viz_thmos.launch
bitbots_quintic_walk/src/: walk_node.cpp
humanoid_base_footprint/src/: base_footprint.cpp
humanoid_league_msgs/: .rdmanifest  CMakeLists.txt  Jenkinsfile  README.md  package.xml
humanoid_league_msgs/msg/: Animation.msg  BallInImageArray.msg  GameState.msg  GoalPostInImage.msg  GoalPostInImageArray.msg  HeadMode.msg  LineInformationInImage.msg  LineInformationRelative.msg  LineIntersectionInImage.msg  LineIntersectionRelative.msg  LineSegmentInImage.msg  LineSegmentRelative.msg  ObstacleInImage.msg  ObstacleInImageArray.msg  ObstacleRelative.msg  ObstacleRelativeArray.msg  PoseWithCertaintyArray.msg  PoseWithCertaintyStamped.msg  RegionOfInterestWithImage.msg  Strategy.msg  TeamData.msg
humanoid_league_visualization/: Jenkinsfile  README.md
humanoid_league_visualization/humanoid_league_field_rqt/: CMakeLists.txt  README  package.xml  plugin.xml  setup.py
humanoid_league_visualization/humanoid_league_field_rqt/cfg/: field_rqt_params.cfg
humanoid_league_visualization/humanoid_league_field_rqt/resource/: 2dField.ui
humanoid_league_visualization/humanoid_league_field_rqt/scripts/: 2d_field
humanoid_league_visualization/humanoid_league_field_rqt/src/humanoid_league_field_rqt/: humanoid_league_field_rqt.py
humanoid_league_visualization/humanoid_league_interactive_marker/: .rdmanifest  CMakeLists.txt  README.md  package.xml
humanoid_league_visualization/humanoid_league_interactive_marker/config/: camera_info.yaml
humanoid_league_visualization/humanoid_league_interactive_marker/launch/: interactive_marker.launch
humanoid_league_visualization/humanoid_league_interactive_marker/src/rviz_behavior_test/: interactive_marker.py
humanoid_league_visualization/humanoid_league_relative_rqt/: CMakeLists.txt  package.xml  plugin.xml  setup.py
humanoid_league_visualization/humanoid_league_relative_rqt/cfg/: relative_rqt_params.cfg
humanoid_league_visualization/humanoid_league_relative_rqt/resource/: relative.ui
humanoid_league_visualization/humanoid_league_relative_rqt/src/humanoid_league_relative_rqt/: humanoid_league_relative_rqt.py
humanoid_league_visualization/humanoid_league_rviz_marker/: CMakeLists.txt  README  package.xml  setup.py
humanoid_league_visualization/humanoid_league_rviz_marker/src/humanoid_league_rviz_marker/: show_robocup_objects.py
lib/rot_conv_lib/: CMakeLists.txt  package.xml
thmos_bringup/: CMakeLists.txt  package.xml  setup.py
thmos_bringup/launch/: load_robot_description_thmos.launch  motion_noviz.launch  motion_viz.launch
thmos_bringup/scripts/: keyboard.py  motor_goals_viz_helper_thmos.py  teleop_keyboard.py
thmos_dynup/: CMakeLists.txt  dynup_front.txt  package.xml
thmos_dynup/config/: dynup_back.txt  dynup_front.txt
thmos_dynup/launch/: viz_thmos.launch
thmos_dynup/scripts/: dynup_demo.py
thmos_dynup/src/: dynup_node.cpp
thmos_robot/thmos_moveit_config/: CMakeLists.txt
thmos_robot/thmos_urdf/: CMakeLists.txt  package.xml
thmos_webots_sim/: README.md
thmos_webots_sim/protos/: RobocupSoccerField.proto
thmos_webots_sim/worlds/: .battle1v1demo.wbproj  .thmos_webots_sim.wbproj  .walk.wbproj  thmos_webots_sim.wbt
udp_bridge/: CMakeLists.txt  package.xml  setup.py
udp_bridge/config/: udp_bridge.yaml
udp_bridge/launch/: receive.launch  send.launch
udp_bridge/src/udp_bridge/: aes_helper.py  receiver.py  sender.py
wolfgang_robot/thmos_moveit_config/: .setup_assistant  package.xml
(+144 files in other folders)
