<?xml version="1.0"?>
<package format="2">
  <name>humanoid_league_msgs</name>
  <version>2.0.0</version>
  <description>These are the standardised ROS messages for the humanoid league.</description>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>

  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>bitbots_docs</depend>

  <export>
     <bitbots_documentation>
      <status>tested_robot</status>
    </bitbots_documentation>
  </export>
</package>
