<?xml version="1.0"?>
<package format="2">
  <name>thmos_dynup</name>
  <version>0.1.8</version>
  <description>The thmos_animation package</description>

  <maintainer email="yons@todo.todo">yons</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>bitbots_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
