<package format="2">
  <name>humanoid_league_field_rqt</name>
  <version>1.0.0</version>
  <description>A Python GUI plugin to visualize data on a 2d view of a RoboCup field. See README for more information.</description>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  
  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

  <license>MIT</license>

  <author>Marc Bestmann</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>humanoid_league_msgs</build_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>qt_dotgraph</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>humanoid_league_msgs</exec_depend>

  <depend>rospy</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>std_msgs</depend>
  <depend>bitbots_docs</depend>


  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <bitbots_documentation>
      <status>tested_viz</status>
      <language>python</language>
    </bitbots_documentation>
  </export>
</package>

