<?xml version="1.0"?>
<package format="2">
  <name>humanoid_league_interactive_marker</name>
  <version>2.0.1</version>
  <description>The humanoid_league_interactive_marker package</description>

  <maintainer email="5guelden@informatik.uni-hamburg.de">Jasper Güldenstein</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>

  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>
  <author email="5guelden@informatik.uni-hamburg.de">Jasper Güldenstein</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <bitbots_documentation>
      <status>tested_viz</status>
      <language>python</language>
    </bitbots_documentation>
  </export>
</package>
