<?xml version="1.0"?>
<package format="2">
  <name>humanoid_league_rviz_marker</name>
  <version>1.0.0</version>
  <description>Shows RoboCup Soccer specific objects in RViz. More information in the README.</description>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>humanoid_league_msgs</depend>
  
  <export>
    <bitbots_documentation>
      <status>unknown</status>
      <language>python3</language>
    </bitbots_documentation>
  </export>
</package>
