<?xml version="1.0"?>
<package>

    <name>rotconv</name>
    <version>1.0.0</version>
    <description>Rotations Conversion Library</description>
    <license>BSD-3-Clause</license>

    <author email="pallgeuer@ais.uni-bonn.de">Philipp Allgeuer</author>

    <maintainer email="7vahl@informatik.uni-hamburg.de">Florian Vahl</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

</package>
